Sumando contenido a la página nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
@@ -8,38 +8,85 @@
     <title> Digitalers | Zapatillas Urbanas (Nosotros) </title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet">
-  </head>
+</head>
+
 <body>
 
 
-
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container-fluid d-flex justify-content-between">
-          <a class="navbar-brand" href="/index.html">Digitalers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
-              </li>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-custom fw-bold">
+            <div class="container-fluid d-flex justify-content-between">
+            <a class="navbar-brand fw-bold p-1 ml-5" href="/index.html">Digitalers</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                </li>
             </ul>
-          </div>
-          <div class="d-flex">
-            <a href="carrito.html" class="text-reset me-3">
-                <i class="fa-solid fa-cart-shopping" style="color: #5b8fb9;"></i>
-        </a>
-      </div>
-    </nav>
-  </header>
+            </div>
+            </div>
+            <div class="d-flex">
+                <a href="pages/carrito.html" class="text-reset me-3">
+                <i class="fa-solid fa-cart-shopping fa-xl"></i>
+            </a>
+        </div>
+        </nav>
+    </header>
+
+<main class="container nosotros bg-dark text-light py-5">
+    <div class="row">
+        <div class="col-md-8">
+        <h1 class="titulo-destacado">Nuestra <span class="text-info bg-dark">historia:</span></h1>
+        <h3 class="mt-4 mb-4">¡Hola y bienvenidos a Digitalers!</h3>
+    <p class="lh-base">
+            Todo comienza en un momento de desafíos y oportunidades únicas. En medio de la pandemia global que cambió nuestras vidas de formas inesperadas. Nos encontramos en la encrucijada de seguir la corriente o aprovechar la situación para crear algo nuevo y emocionate. <span class="text-info bg-dark fw-bolder">Optamos por lo último</span>
+    </p>
+        <p class="lh-base">
+            Comenzamos explorando el mundo de las zapatillas y descubrimos que había un mercado vibrante y emocionante en la reventa de calzado exclusivo y de edición limitada. A medida que investigabamos y nos sumergíamos en la cultura de las zapatillas, nos dimos cuenta de que podíamos ofrecer algo más que productos; <span class="text-info bg-dark fw-bolder">podíamos brindar acceso a la autenticidad y la exclusividad que los verdaderos entusiastas buscan </span>
+    </p>
+
+    <p class="lh-base">
+        Desde los comienzos como un proyecto en línea, hemos crecido y evolucionado. Lo que una vez fue un puñado de zapatillas únicas se ha convertido en una colección diversa y emocionante de calzado de marcas renombradas y ediciones limitadas. Cada par que ofrecemos ha sido cuidadosamente seleccionado para reflejar la calidad, el estilo y la autenticidad que nos definen
+    </p>
+<p class="lh-base">
+    A medida que miramos hacia el futuro, estamos comprometidos a seguir siendo una fuente confiable de zapatillas auténticas y de calidad para la comunidad que amamos. Gracias por unirte a nosotros en este emocionante viaje. 
+</p>
+<p class="lh-base">
+    ¡Explora, descubre y encuentra tu par perfecto con nosotros en <span class="text-info bg-dark fw-bolder">Digitalers! </span>
+</p>
+
+    
+        <div class="nosotros-iconos d-flex flex-column align-items-center justify-content-center mb-4">
+            <ul class="list-unstyled d-flex">
+                <li class="me-3"><a href="https://facebook.com"><i class="fa-brands fa-facebook fa-3x custom-icon"></i></a></li>
+                <li class="me-3"><a href="https://wa.me/5491234567890"><i class="fa-brands fa-whatsapp fa-3x custom-icon"></i></a></li>
+                <li class="me-3"><a href="https://instagram.com"><i class="fab fa-brands fa-instagram fa-3x custom-icon"></i></a></li>
+                <li class="me-3"><a href="mailto:julianaaescudero@gmail.com"><i class="fa-regular fa-envelope fa-3x custom-icon"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    </div>
+
+    <div class="col-5">
+        <div class="nosotros-imagen">
+<img
+            class="img-fluid"
+            src="../"
+            alt=""
+            />
+        </div> 
+    </div>
+    
+</main>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
