--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,37 +9,63 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <link href="css/style.css" rel="stylesheet">
   </head>
-<body>
-
-
-    
+<main>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container-fluid d-flex justify-content-between">
-          <a class="navbar-brand" href="/index.html">Digitalers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-          <div class="d-flex">
-            <a href="carrito.html" class="text-reset me-3">
-                <i class="fa-solid fa-cart-shopping" style="color: #5b8fb9;"></i>
+    <nav class="navbar navbar-expand-lg navbar-custom fw-bold">
+      <div class="container-fluid d-flex justify-content-between">
+        <a class="navbar-brand fw-bold p-1 ml-5" href="/index.html">Digitalers</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+        </div>
+        <div class="d-flex">
+          <a href="/pages/carrito.html" class="text-reset me-3">
+            <i class="fa-solid fa-cart-shopping fa-xl"></i>
         </a>
       </div>
     </nav>
   </header>
+
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <h1 class="text-center titulo-destacado text-white">Contáctanos</h1>
+        <p class="text-center text-white lh-base">¡Estamos para ayudarte! Ponte en contacto con nosotros a través del formulario:</p>
+
+        <form>
+          <div class="form-group text-white">
+            <label for="nombre">Nombre:</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre:" required>
+          </div>
+          <div class="form-group text-white">
+            <label for="email">Correo electrónico:</label>
+            <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico:" required>
+          </div>
+          <div class="form-group text-white">
+            <label for="mensaje">Mensaje:</label>
+            <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje" required></textarea>
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+          <button type="submit" class="btn btn-secondary btn-block mt-4">Enviar mensaje</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</main>
   <script type="module" src="/main.js"></script>
 </body>
 </html>
