--- a/index.html
+++ b/index.html
@@ -283,7 +283,17 @@
       </main>
 
     <footer class="container-fluid">
-      
+      <div class="footer-container">
+        <div class="footer-logo">
+        </div>
+        <div class="footer-info text-white">
+            <p>Córdoba, Argentina</p>
+            <p>Todos los derechos reservados &copy; 2023</p>
+        </div>
+        <div class="footer-social">
+          <a href="www.facebook.com"><img class="social-icon" src="img/Facebook.svg" alt="Facebook"></a>
+          <a href="www.instagram.com"><img class="social-icon" src="img/Instagram.svg" alt="Instagram"></a>
+      </div>
     </footer>
     <script type="module" src="/main.js"></script>
   </body>
