--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -23,19 +23,19 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="/ndex.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+              <a class="nav-link" href="/pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/contacto.html">Contacto</a>
+              <a class="nav-link" href="/pages/contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
         </div>
         <div class="d-flex">
-          <a href="pages/carrito.html" class="text-reset me-3">
+          <a href="/pages/carrito.html" class="text-reset me-3">
             <i class="fa-solid fa-cart-shopping fa-xl"></i>
         </a>
       </div>
@@ -58,7 +58,7 @@
                 <div class="col-4 mb-1">
                   <!-- imagen -->
                   <div class="bg-image rounded">
-                    <img class="w-100" src="/img/jordanreact1.jpeg" alt="Notebook Acer">
+                    <img class="w-100" src="/img/jordanreact1.jpeg" alt="Air Force React">
                   </div>
                 </div>
                 <div class="col-6">
@@ -67,13 +67,13 @@
                   <p>Caracteristicas</p>
                   <p>Precio</p>
 
-                  <button type="button" class="btn btn-danger btn-sm me-1 mb-2"><i class="fa-solid fa-trash-can"></i></button>
+                  <button type="button" class="btn btn-custom btn-m me-1 mb-2"><i class="fa-solid fa-trash-can"></i></button>
 
                 </div>
                 <div class="col-2">
                   <input type="text" class="form-control text-center" placeholder="Cantidad" value="1" >
                   <p class="text-center mt-4">
-                    <strong>$1300.34</strong>
+                    <strong>$ 106.499</strong>
                   </p>
                 </div>
 
@@ -86,7 +86,7 @@
                 <div class="col-4 mb-1">
                   <!-- imagen -->
                   <div class="bg-image rounded">
-                    <img class="w-100" src="/img/pumacalidream1.jpeg" alt="Notebook Acer">
+                    <img class="w-100" src="/img/pumacalidream1.jpeg" alt="Puma Cali Dream">
                   </div>
                 </div>
                 <div class="col-6">
@@ -95,13 +95,13 @@
                   <p>Caracteristicas</p>
                   <p>Precio</p>
 
-                  <button type="button" class="btn btn-danger btn-sm me-1 mb-2"><i class="fa-solid fa-trash-can"></i></button>
+                  <button type="button" class="btn btn-custom btn-m me-1 mb-2"><i class="fa-solid fa-trash-can"></i></button>
 
                 </div>
                 <div class="col-2">
                   <input type="text" class="form-control text-center" placeholder="Cantidad" value="1" >
                   <p class="text-center mt-4">
-                    <strong>$1300.34</strong>
+                    <strong>$ 59.999</strong>
                   </p>
                 </div>
 
@@ -112,13 +112,15 @@
           </div>
 
 
+          <!--Medios de pago-->
           <div class="card mb-4">
             <div class="card-body tarjetas">
-              <p><strong>Métodos de pago aceptados</strong></p>
+              <p><strong>Métodos de pago aceptados:</strong></p>
               <img src="/img/tarjetas/amex.svg" alt="American Express" class="me-2">
               <img src="/img/tarjetas/master.svg" alt="Mastercard" class="me-2">
               <img src="/img/tarjetas/visa.svg" alt="Visa" class="me-2">
               <img src="/img/tarjetas/paypal.svg" alt="PayPal" class="me-2">
+              <img src="/img/tarjetas/mercadopago.svg" alt="MercadoPago" class="me-2">
             </div>
           </div>
 
@@ -133,7 +135,7 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                   Productos
-                  <span>$1300.34</span>
+                  <span>$166.498</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                   Envío
@@ -145,12 +147,13 @@
                     <strong>Total de la compra</strong>
                     <strong>(IVA Incluido)</strong>
                   </div>
-                  <span><strong>$1300.34</strong></span>
+                  <span><strong>$166.498</strong></span>
                 </li>
               </ul>
 
-              <button type="button" class="btn btn-success btn-lg btn-block mt-4">Ir a pagar</button>
-
+              <div class="d-flex justify-content-center align-items-center"> 
+              <button type="button" class="btn btn-secondary btn-lg btn-block mt-4">Ir a pagar</button>
+            </div>
             </div>
 
           </div>
